# GraphAvalanche

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  app.py  app_v2.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: nbug_report.md
.github/workflows/: tests.yml
docs/: API.md
examples/: basic_usage.py
graphavalanche/: __init__.py  loader.py  network.py
tests/: test_graphavalanche.py
